parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDIDO_POR
    ESTA_PRESENTE_EN
    INTERACTUAR_CON
    MAS
    MENOS
    MULTIPLICADO_POR
    TRANSICIONAR_A
    Y

Grammar

Rule 0     S' -> program
Rule 1     program -> INICIO bloque FIN
Rule 2     bloque -> instrucciones
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instrucciones -> instruccion
Rule 5     instrucciones -> <empty>
Rule 6     instruccion -> movimiento
Rule 7     instruccion -> accion
Rule 8     instruccion -> condicional
Rule 9     instruccion -> bucle
Rule 10    instruccion -> declaracion
Rule 11    movimiento -> MOVER direccion
Rule 12    direccion -> NORTE
Rule 13    direccion -> SUR
Rule 14    direccion -> ESTE
Rule 15    direccion -> OESTE
Rule 16    accion -> MANIFESTAR CADENA
Rule 17    condicional -> SI expresion ENTONCES bloque sino_opcional
Rule 18    sino_opcional -> SINO bloque
Rule 19    sino_opcional -> <empty>
Rule 20    bucle -> MIENTRAS expresion HACER bloque FINMIENTRAS
Rule 21    bucle -> REPETIR NUM VECES COLON bloque
Rule 22    declaracion -> ESTABLECE IDENT A valor
Rule 23    expresion -> IDENT operador valor
Rule 24    expresion -> IDENT
Rule 25    expresion -> valor
Rule 26    operador -> ES_MAYOR_QUE
Rule 27    operador -> ES_MENOR_QUE
Rule 28    operador -> IGUAL
Rule 29    operador -> DISTINTO
Rule 30    operador -> ES
Rule 31    valor -> NUM
Rule 32    valor -> CADENA

Terminals, with rules where they appear

A                    : 22
CADENA               : 16 32
COLON                : 21
DISTINTO             : 29
DIVIDIDO_POR         : 
ENTONCES             : 17
ES                   : 30
ESTABLECE            : 22
ESTA_PRESENTE_EN     : 
ESTE                 : 14
ES_MAYOR_QUE         : 26
ES_MENOR_QUE         : 27
FIN                  : 1
FINMIENTRAS          : 20
HACER                : 20
IDENT                : 22 23 24
IGUAL                : 28
INICIO               : 1
INTERACTUAR_CON      : 
MANIFESTAR           : 16
MAS                  : 
MENOS                : 
MIENTRAS             : 20
MOVER                : 11
MULTIPLICADO_POR     : 
NORTE                : 12
NUM                  : 21 31
OESTE                : 15
REPETIR              : 21
SI                   : 17
SINO                 : 18
SUR                  : 13
TRANSICIONAR_A       : 
VECES                : 21
Y                    : 
error                : 

Nonterminals, with rules where they appear

accion               : 7
bloque               : 1 17 18 20 21
bucle                : 9
condicional          : 8
declaracion          : 10
direccion            : 11
expresion            : 17 20
instruccion          : 3 4
instrucciones        : 2 3
movimiento           : 6
operador             : 23
program              : 0
sino_opcional        : 17
valor                : 22 23 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . INICIO bloque FIN

    INICIO          shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> INICIO . bloque FIN
    (2) bloque -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instrucciones -> .
    (6) instruccion -> . movimiento
    (7) instruccion -> . accion
    (8) instruccion -> . condicional
    (9) instruccion -> . bucle
    (10) instruccion -> . declaracion
    (11) movimiento -> . MOVER direccion
    (16) accion -> . MANIFESTAR CADENA
    (17) condicional -> . SI expresion ENTONCES bloque sino_opcional
    (20) bucle -> . MIENTRAS expresion HACER bloque FINMIENTRAS
    (21) bucle -> . REPETIR NUM VECES COLON bloque
    (22) declaracion -> . ESTABLECE IDENT A valor

  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for MANIFESTAR resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for REPETIR resolved as shift
  ! shift/reduce conflict for ESTABLECE resolved as shift
    FIN             reduce using rule 5 (instrucciones -> .)
    MOVER           shift and go to state 11
    MANIFESTAR      shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    REPETIR         shift and go to state 15
    ESTABLECE       shift and go to state 16

  ! MOVER           [ reduce using rule 5 (instrucciones -> .) ]
  ! MANIFESTAR      [ reduce using rule 5 (instrucciones -> .) ]
  ! SI              [ reduce using rule 5 (instrucciones -> .) ]
  ! MIENTRAS        [ reduce using rule 5 (instrucciones -> .) ]
  ! REPETIR         [ reduce using rule 5 (instrucciones -> .) ]
  ! ESTABLECE       [ reduce using rule 5 (instrucciones -> .) ]

    bloque                         shift and go to state 3
    instrucciones                  shift and go to state 4
    instruccion                    shift and go to state 5
    movimiento                     shift and go to state 6
    accion                         shift and go to state 7
    condicional                    shift and go to state 8
    bucle                          shift and go to state 9
    declaracion                    shift and go to state 10

state 3

    (1) program -> INICIO bloque . FIN

    FIN             shift and go to state 17


state 4

    (2) bloque -> instrucciones .
    (3) instrucciones -> instrucciones . instruccion
    (6) instruccion -> . movimiento
    (7) instruccion -> . accion
    (8) instruccion -> . condicional
    (9) instruccion -> . bucle
    (10) instruccion -> . declaracion
    (11) movimiento -> . MOVER direccion
    (16) accion -> . MANIFESTAR CADENA
    (17) condicional -> . SI expresion ENTONCES bloque sino_opcional
    (20) bucle -> . MIENTRAS expresion HACER bloque FINMIENTRAS
    (21) bucle -> . REPETIR NUM VECES COLON bloque
    (22) declaracion -> . ESTABLECE IDENT A valor

  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for MANIFESTAR resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for REPETIR resolved as shift
  ! shift/reduce conflict for ESTABLECE resolved as shift
    FIN             reduce using rule 2 (bloque -> instrucciones .)
    SINO            reduce using rule 2 (bloque -> instrucciones .)
    FINMIENTRAS     reduce using rule 2 (bloque -> instrucciones .)
    MOVER           shift and go to state 11
    MANIFESTAR      shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    REPETIR         shift and go to state 15
    ESTABLECE       shift and go to state 16

  ! MOVER           [ reduce using rule 2 (bloque -> instrucciones .) ]
  ! MANIFESTAR      [ reduce using rule 2 (bloque -> instrucciones .) ]
  ! SI              [ reduce using rule 2 (bloque -> instrucciones .) ]
  ! MIENTRAS        [ reduce using rule 2 (bloque -> instrucciones .) ]
  ! REPETIR         [ reduce using rule 2 (bloque -> instrucciones .) ]
  ! ESTABLECE       [ reduce using rule 2 (bloque -> instrucciones .) ]

    instruccion                    shift and go to state 18
    movimiento                     shift and go to state 6
    accion                         shift and go to state 7
    condicional                    shift and go to state 8
    bucle                          shift and go to state 9
    declaracion                    shift and go to state 10

state 5

    (4) instrucciones -> instruccion .

    MOVER           reduce using rule 4 (instrucciones -> instruccion .)
    MANIFESTAR      reduce using rule 4 (instrucciones -> instruccion .)
    SI              reduce using rule 4 (instrucciones -> instruccion .)
    MIENTRAS        reduce using rule 4 (instrucciones -> instruccion .)
    REPETIR         reduce using rule 4 (instrucciones -> instruccion .)
    ESTABLECE       reduce using rule 4 (instrucciones -> instruccion .)
    FIN             reduce using rule 4 (instrucciones -> instruccion .)
    SINO            reduce using rule 4 (instrucciones -> instruccion .)
    FINMIENTRAS     reduce using rule 4 (instrucciones -> instruccion .)


state 6

    (6) instruccion -> movimiento .

    MOVER           reduce using rule 6 (instruccion -> movimiento .)
    MANIFESTAR      reduce using rule 6 (instruccion -> movimiento .)
    SI              reduce using rule 6 (instruccion -> movimiento .)
    MIENTRAS        reduce using rule 6 (instruccion -> movimiento .)
    REPETIR         reduce using rule 6 (instruccion -> movimiento .)
    ESTABLECE       reduce using rule 6 (instruccion -> movimiento .)
    FIN             reduce using rule 6 (instruccion -> movimiento .)
    SINO            reduce using rule 6 (instruccion -> movimiento .)
    FINMIENTRAS     reduce using rule 6 (instruccion -> movimiento .)


state 7

    (7) instruccion -> accion .

    MOVER           reduce using rule 7 (instruccion -> accion .)
    MANIFESTAR      reduce using rule 7 (instruccion -> accion .)
    SI              reduce using rule 7 (instruccion -> accion .)
    MIENTRAS        reduce using rule 7 (instruccion -> accion .)
    REPETIR         reduce using rule 7 (instruccion -> accion .)
    ESTABLECE       reduce using rule 7 (instruccion -> accion .)
    FIN             reduce using rule 7 (instruccion -> accion .)
    SINO            reduce using rule 7 (instruccion -> accion .)
    FINMIENTRAS     reduce using rule 7 (instruccion -> accion .)


state 8

    (8) instruccion -> condicional .

    MOVER           reduce using rule 8 (instruccion -> condicional .)
    MANIFESTAR      reduce using rule 8 (instruccion -> condicional .)
    SI              reduce using rule 8 (instruccion -> condicional .)
    MIENTRAS        reduce using rule 8 (instruccion -> condicional .)
    REPETIR         reduce using rule 8 (instruccion -> condicional .)
    ESTABLECE       reduce using rule 8 (instruccion -> condicional .)
    FIN             reduce using rule 8 (instruccion -> condicional .)
    SINO            reduce using rule 8 (instruccion -> condicional .)
    FINMIENTRAS     reduce using rule 8 (instruccion -> condicional .)


state 9

    (9) instruccion -> bucle .

    MOVER           reduce using rule 9 (instruccion -> bucle .)
    MANIFESTAR      reduce using rule 9 (instruccion -> bucle .)
    SI              reduce using rule 9 (instruccion -> bucle .)
    MIENTRAS        reduce using rule 9 (instruccion -> bucle .)
    REPETIR         reduce using rule 9 (instruccion -> bucle .)
    ESTABLECE       reduce using rule 9 (instruccion -> bucle .)
    FIN             reduce using rule 9 (instruccion -> bucle .)
    SINO            reduce using rule 9 (instruccion -> bucle .)
    FINMIENTRAS     reduce using rule 9 (instruccion -> bucle .)


state 10

    (10) instruccion -> declaracion .

    MOVER           reduce using rule 10 (instruccion -> declaracion .)
    MANIFESTAR      reduce using rule 10 (instruccion -> declaracion .)
    SI              reduce using rule 10 (instruccion -> declaracion .)
    MIENTRAS        reduce using rule 10 (instruccion -> declaracion .)
    REPETIR         reduce using rule 10 (instruccion -> declaracion .)
    ESTABLECE       reduce using rule 10 (instruccion -> declaracion .)
    FIN             reduce using rule 10 (instruccion -> declaracion .)
    SINO            reduce using rule 10 (instruccion -> declaracion .)
    FINMIENTRAS     reduce using rule 10 (instruccion -> declaracion .)


state 11

    (11) movimiento -> MOVER . direccion
    (12) direccion -> . NORTE
    (13) direccion -> . SUR
    (14) direccion -> . ESTE
    (15) direccion -> . OESTE

    NORTE           shift and go to state 20
    SUR             shift and go to state 21
    ESTE            shift and go to state 22
    OESTE           shift and go to state 23

    direccion                      shift and go to state 19

state 12

    (16) accion -> MANIFESTAR . CADENA

    CADENA          shift and go to state 24


state 13

    (17) condicional -> SI . expresion ENTONCES bloque sino_opcional
    (23) expresion -> . IDENT operador valor
    (24) expresion -> . IDENT
    (25) expresion -> . valor
    (31) valor -> . NUM
    (32) valor -> . CADENA

    IDENT           shift and go to state 26
    NUM             shift and go to state 28
    CADENA          shift and go to state 29

    expresion                      shift and go to state 25
    valor                          shift and go to state 27

state 14

    (20) bucle -> MIENTRAS . expresion HACER bloque FINMIENTRAS
    (23) expresion -> . IDENT operador valor
    (24) expresion -> . IDENT
    (25) expresion -> . valor
    (31) valor -> . NUM
    (32) valor -> . CADENA

    IDENT           shift and go to state 26
    NUM             shift and go to state 28
    CADENA          shift and go to state 29

    expresion                      shift and go to state 30
    valor                          shift and go to state 27

state 15

    (21) bucle -> REPETIR . NUM VECES COLON bloque

    NUM             shift and go to state 31


state 16

    (22) declaracion -> ESTABLECE . IDENT A valor

    IDENT           shift and go to state 32


state 17

    (1) program -> INICIO bloque FIN .

    $end            reduce using rule 1 (program -> INICIO bloque FIN .)


state 18

    (3) instrucciones -> instrucciones instruccion .

    MOVER           reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    MANIFESTAR      reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    SI              reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    MIENTRAS        reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    REPETIR         reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    ESTABLECE       reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    FIN             reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    SINO            reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    FINMIENTRAS     reduce using rule 3 (instrucciones -> instrucciones instruccion .)


state 19

    (11) movimiento -> MOVER direccion .

    MOVER           reduce using rule 11 (movimiento -> MOVER direccion .)
    MANIFESTAR      reduce using rule 11 (movimiento -> MOVER direccion .)
    SI              reduce using rule 11 (movimiento -> MOVER direccion .)
    MIENTRAS        reduce using rule 11 (movimiento -> MOVER direccion .)
    REPETIR         reduce using rule 11 (movimiento -> MOVER direccion .)
    ESTABLECE       reduce using rule 11 (movimiento -> MOVER direccion .)
    FIN             reduce using rule 11 (movimiento -> MOVER direccion .)
    SINO            reduce using rule 11 (movimiento -> MOVER direccion .)
    FINMIENTRAS     reduce using rule 11 (movimiento -> MOVER direccion .)


state 20

    (12) direccion -> NORTE .

    MOVER           reduce using rule 12 (direccion -> NORTE .)
    MANIFESTAR      reduce using rule 12 (direccion -> NORTE .)
    SI              reduce using rule 12 (direccion -> NORTE .)
    MIENTRAS        reduce using rule 12 (direccion -> NORTE .)
    REPETIR         reduce using rule 12 (direccion -> NORTE .)
    ESTABLECE       reduce using rule 12 (direccion -> NORTE .)
    FIN             reduce using rule 12 (direccion -> NORTE .)
    SINO            reduce using rule 12 (direccion -> NORTE .)
    FINMIENTRAS     reduce using rule 12 (direccion -> NORTE .)


state 21

    (13) direccion -> SUR .

    MOVER           reduce using rule 13 (direccion -> SUR .)
    MANIFESTAR      reduce using rule 13 (direccion -> SUR .)
    SI              reduce using rule 13 (direccion -> SUR .)
    MIENTRAS        reduce using rule 13 (direccion -> SUR .)
    REPETIR         reduce using rule 13 (direccion -> SUR .)
    ESTABLECE       reduce using rule 13 (direccion -> SUR .)
    FIN             reduce using rule 13 (direccion -> SUR .)
    SINO            reduce using rule 13 (direccion -> SUR .)
    FINMIENTRAS     reduce using rule 13 (direccion -> SUR .)


state 22

    (14) direccion -> ESTE .

    MOVER           reduce using rule 14 (direccion -> ESTE .)
    MANIFESTAR      reduce using rule 14 (direccion -> ESTE .)
    SI              reduce using rule 14 (direccion -> ESTE .)
    MIENTRAS        reduce using rule 14 (direccion -> ESTE .)
    REPETIR         reduce using rule 14 (direccion -> ESTE .)
    ESTABLECE       reduce using rule 14 (direccion -> ESTE .)
    FIN             reduce using rule 14 (direccion -> ESTE .)
    SINO            reduce using rule 14 (direccion -> ESTE .)
    FINMIENTRAS     reduce using rule 14 (direccion -> ESTE .)


state 23

    (15) direccion -> OESTE .

    MOVER           reduce using rule 15 (direccion -> OESTE .)
    MANIFESTAR      reduce using rule 15 (direccion -> OESTE .)
    SI              reduce using rule 15 (direccion -> OESTE .)
    MIENTRAS        reduce using rule 15 (direccion -> OESTE .)
    REPETIR         reduce using rule 15 (direccion -> OESTE .)
    ESTABLECE       reduce using rule 15 (direccion -> OESTE .)
    FIN             reduce using rule 15 (direccion -> OESTE .)
    SINO            reduce using rule 15 (direccion -> OESTE .)
    FINMIENTRAS     reduce using rule 15 (direccion -> OESTE .)


state 24

    (16) accion -> MANIFESTAR CADENA .

    MOVER           reduce using rule 16 (accion -> MANIFESTAR CADENA .)
    MANIFESTAR      reduce using rule 16 (accion -> MANIFESTAR CADENA .)
    SI              reduce using rule 16 (accion -> MANIFESTAR CADENA .)
    MIENTRAS        reduce using rule 16 (accion -> MANIFESTAR CADENA .)
    REPETIR         reduce using rule 16 (accion -> MANIFESTAR CADENA .)
    ESTABLECE       reduce using rule 16 (accion -> MANIFESTAR CADENA .)
    FIN             reduce using rule 16 (accion -> MANIFESTAR CADENA .)
    SINO            reduce using rule 16 (accion -> MANIFESTAR CADENA .)
    FINMIENTRAS     reduce using rule 16 (accion -> MANIFESTAR CADENA .)


state 25

    (17) condicional -> SI expresion . ENTONCES bloque sino_opcional

    ENTONCES        shift and go to state 33


state 26

    (23) expresion -> IDENT . operador valor
    (24) expresion -> IDENT .
    (26) operador -> . ES_MAYOR_QUE
    (27) operador -> . ES_MENOR_QUE
    (28) operador -> . IGUAL
    (29) operador -> . DISTINTO
    (30) operador -> . ES

    ENTONCES        reduce using rule 24 (expresion -> IDENT .)
    HACER           reduce using rule 24 (expresion -> IDENT .)
    ES_MAYOR_QUE    shift and go to state 35
    ES_MENOR_QUE    shift and go to state 36
    IGUAL           shift and go to state 37
    DISTINTO        shift and go to state 38
    ES              shift and go to state 39

    operador                       shift and go to state 34

state 27

    (25) expresion -> valor .

    ENTONCES        reduce using rule 25 (expresion -> valor .)
    HACER           reduce using rule 25 (expresion -> valor .)


state 28

    (31) valor -> NUM .

    ENTONCES        reduce using rule 31 (valor -> NUM .)
    HACER           reduce using rule 31 (valor -> NUM .)
    MOVER           reduce using rule 31 (valor -> NUM .)
    MANIFESTAR      reduce using rule 31 (valor -> NUM .)
    SI              reduce using rule 31 (valor -> NUM .)
    MIENTRAS        reduce using rule 31 (valor -> NUM .)
    REPETIR         reduce using rule 31 (valor -> NUM .)
    ESTABLECE       reduce using rule 31 (valor -> NUM .)
    FIN             reduce using rule 31 (valor -> NUM .)
    SINO            reduce using rule 31 (valor -> NUM .)
    FINMIENTRAS     reduce using rule 31 (valor -> NUM .)


state 29

    (32) valor -> CADENA .

    ENTONCES        reduce using rule 32 (valor -> CADENA .)
    HACER           reduce using rule 32 (valor -> CADENA .)
    MOVER           reduce using rule 32 (valor -> CADENA .)
    MANIFESTAR      reduce using rule 32 (valor -> CADENA .)
    SI              reduce using rule 32 (valor -> CADENA .)
    MIENTRAS        reduce using rule 32 (valor -> CADENA .)
    REPETIR         reduce using rule 32 (valor -> CADENA .)
    ESTABLECE       reduce using rule 32 (valor -> CADENA .)
    FIN             reduce using rule 32 (valor -> CADENA .)
    SINO            reduce using rule 32 (valor -> CADENA .)
    FINMIENTRAS     reduce using rule 32 (valor -> CADENA .)


state 30

    (20) bucle -> MIENTRAS expresion . HACER bloque FINMIENTRAS

    HACER           shift and go to state 40


state 31

    (21) bucle -> REPETIR NUM . VECES COLON bloque

    VECES           shift and go to state 41


state 32

    (22) declaracion -> ESTABLECE IDENT . A valor

    A               shift and go to state 42


state 33

    (17) condicional -> SI expresion ENTONCES . bloque sino_opcional
    (2) bloque -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instrucciones -> .
    (6) instruccion -> . movimiento
    (7) instruccion -> . accion
    (8) instruccion -> . condicional
    (9) instruccion -> . bucle
    (10) instruccion -> . declaracion
    (11) movimiento -> . MOVER direccion
    (16) accion -> . MANIFESTAR CADENA
    (17) condicional -> . SI expresion ENTONCES bloque sino_opcional
    (20) bucle -> . MIENTRAS expresion HACER bloque FINMIENTRAS
    (21) bucle -> . REPETIR NUM VECES COLON bloque
    (22) declaracion -> . ESTABLECE IDENT A valor

  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for MANIFESTAR resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for REPETIR resolved as shift
  ! shift/reduce conflict for ESTABLECE resolved as shift
    FIN             reduce using rule 5 (instrucciones -> .)
    SINO            reduce using rule 5 (instrucciones -> .)
    FINMIENTRAS     reduce using rule 5 (instrucciones -> .)
    MOVER           shift and go to state 11
    MANIFESTAR      shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    REPETIR         shift and go to state 15
    ESTABLECE       shift and go to state 16

  ! MOVER           [ reduce using rule 5 (instrucciones -> .) ]
  ! MANIFESTAR      [ reduce using rule 5 (instrucciones -> .) ]
  ! SI              [ reduce using rule 5 (instrucciones -> .) ]
  ! MIENTRAS        [ reduce using rule 5 (instrucciones -> .) ]
  ! REPETIR         [ reduce using rule 5 (instrucciones -> .) ]
  ! ESTABLECE       [ reduce using rule 5 (instrucciones -> .) ]

    bloque                         shift and go to state 43
    instrucciones                  shift and go to state 4
    instruccion                    shift and go to state 5
    movimiento                     shift and go to state 6
    accion                         shift and go to state 7
    condicional                    shift and go to state 8
    bucle                          shift and go to state 9
    declaracion                    shift and go to state 10

state 34

    (23) expresion -> IDENT operador . valor
    (31) valor -> . NUM
    (32) valor -> . CADENA

    NUM             shift and go to state 28
    CADENA          shift and go to state 29

    valor                          shift and go to state 44

state 35

    (26) operador -> ES_MAYOR_QUE .

    NUM             reduce using rule 26 (operador -> ES_MAYOR_QUE .)
    CADENA          reduce using rule 26 (operador -> ES_MAYOR_QUE .)


state 36

    (27) operador -> ES_MENOR_QUE .

    NUM             reduce using rule 27 (operador -> ES_MENOR_QUE .)
    CADENA          reduce using rule 27 (operador -> ES_MENOR_QUE .)


state 37

    (28) operador -> IGUAL .

    NUM             reduce using rule 28 (operador -> IGUAL .)
    CADENA          reduce using rule 28 (operador -> IGUAL .)


state 38

    (29) operador -> DISTINTO .

    NUM             reduce using rule 29 (operador -> DISTINTO .)
    CADENA          reduce using rule 29 (operador -> DISTINTO .)


state 39

    (30) operador -> ES .

    NUM             reduce using rule 30 (operador -> ES .)
    CADENA          reduce using rule 30 (operador -> ES .)


state 40

    (20) bucle -> MIENTRAS expresion HACER . bloque FINMIENTRAS
    (2) bloque -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instrucciones -> .
    (6) instruccion -> . movimiento
    (7) instruccion -> . accion
    (8) instruccion -> . condicional
    (9) instruccion -> . bucle
    (10) instruccion -> . declaracion
    (11) movimiento -> . MOVER direccion
    (16) accion -> . MANIFESTAR CADENA
    (17) condicional -> . SI expresion ENTONCES bloque sino_opcional
    (20) bucle -> . MIENTRAS expresion HACER bloque FINMIENTRAS
    (21) bucle -> . REPETIR NUM VECES COLON bloque
    (22) declaracion -> . ESTABLECE IDENT A valor

  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for MANIFESTAR resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for REPETIR resolved as shift
  ! shift/reduce conflict for ESTABLECE resolved as shift
    FINMIENTRAS     reduce using rule 5 (instrucciones -> .)
    MOVER           shift and go to state 11
    MANIFESTAR      shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    REPETIR         shift and go to state 15
    ESTABLECE       shift and go to state 16

  ! MOVER           [ reduce using rule 5 (instrucciones -> .) ]
  ! MANIFESTAR      [ reduce using rule 5 (instrucciones -> .) ]
  ! SI              [ reduce using rule 5 (instrucciones -> .) ]
  ! MIENTRAS        [ reduce using rule 5 (instrucciones -> .) ]
  ! REPETIR         [ reduce using rule 5 (instrucciones -> .) ]
  ! ESTABLECE       [ reduce using rule 5 (instrucciones -> .) ]

    bloque                         shift and go to state 45
    instrucciones                  shift and go to state 4
    instruccion                    shift and go to state 5
    movimiento                     shift and go to state 6
    accion                         shift and go to state 7
    condicional                    shift and go to state 8
    bucle                          shift and go to state 9
    declaracion                    shift and go to state 10

state 41

    (21) bucle -> REPETIR NUM VECES . COLON bloque

    COLON           shift and go to state 46


state 42

    (22) declaracion -> ESTABLECE IDENT A . valor
    (31) valor -> . NUM
    (32) valor -> . CADENA

    NUM             shift and go to state 28
    CADENA          shift and go to state 29

    valor                          shift and go to state 47

state 43

    (17) condicional -> SI expresion ENTONCES bloque . sino_opcional
    (18) sino_opcional -> . SINO bloque
    (19) sino_opcional -> .

  ! shift/reduce conflict for SINO resolved as shift
    SINO            shift and go to state 49
    MOVER           reduce using rule 19 (sino_opcional -> .)
    MANIFESTAR      reduce using rule 19 (sino_opcional -> .)
    SI              reduce using rule 19 (sino_opcional -> .)
    MIENTRAS        reduce using rule 19 (sino_opcional -> .)
    REPETIR         reduce using rule 19 (sino_opcional -> .)
    ESTABLECE       reduce using rule 19 (sino_opcional -> .)
    FIN             reduce using rule 19 (sino_opcional -> .)
    FINMIENTRAS     reduce using rule 19 (sino_opcional -> .)

  ! SINO            [ reduce using rule 19 (sino_opcional -> .) ]

    sino_opcional                  shift and go to state 48

state 44

    (23) expresion -> IDENT operador valor .

    ENTONCES        reduce using rule 23 (expresion -> IDENT operador valor .)
    HACER           reduce using rule 23 (expresion -> IDENT operador valor .)


state 45

    (20) bucle -> MIENTRAS expresion HACER bloque . FINMIENTRAS

    FINMIENTRAS     shift and go to state 50


state 46

    (21) bucle -> REPETIR NUM VECES COLON . bloque
    (2) bloque -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instrucciones -> .
    (6) instruccion -> . movimiento
    (7) instruccion -> . accion
    (8) instruccion -> . condicional
    (9) instruccion -> . bucle
    (10) instruccion -> . declaracion
    (11) movimiento -> . MOVER direccion
    (16) accion -> . MANIFESTAR CADENA
    (17) condicional -> . SI expresion ENTONCES bloque sino_opcional
    (20) bucle -> . MIENTRAS expresion HACER bloque FINMIENTRAS
    (21) bucle -> . REPETIR NUM VECES COLON bloque
    (22) declaracion -> . ESTABLECE IDENT A valor

  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for MANIFESTAR resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for REPETIR resolved as shift
  ! shift/reduce conflict for ESTABLECE resolved as shift
    FIN             reduce using rule 5 (instrucciones -> .)
    SINO            reduce using rule 5 (instrucciones -> .)
    FINMIENTRAS     reduce using rule 5 (instrucciones -> .)
    MOVER           shift and go to state 11
    MANIFESTAR      shift and go to state 12
    SI              shift and go to state 13
    MIENTRAS        shift and go to state 14
    REPETIR         shift and go to state 15
    ESTABLECE       shift and go to state 16

  ! MOVER           [ reduce using rule 5 (instrucciones -> .) ]
  ! MANIFESTAR      [ reduce using rule 5 (instrucciones -> .) ]
  ! SI              [ reduce using rule 5 (instrucciones -> .) ]
  ! MIENTRAS        [ reduce using rule 5 (instrucciones -> .) ]
  ! REPETIR         [ reduce using rule 5 (instrucciones -> .) ]
  ! ESTABLECE       [ reduce using rule 5 (instrucciones -> .) ]

    bloque                         shift and go to state 51
    instrucciones                  shift and go to state 4
    instruccion                    shift and go to state 5
    movimiento                     shift and go to state 6
    accion                         shift and go to state 7
    condicional                    shift and go to state 8
    bucle                          shift and go to state 9
    declaracion                    shift and go to state 10

state 47

    (22) declaracion -> ESTABLECE IDENT A valor .

    MOVER           reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)
    MANIFESTAR      reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)
    SI              reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)
    MIENTRAS        reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)
    REPETIR         reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)
    ESTABLECE       reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)
    FIN             reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)
    SINO            reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)
    FINMIENTRAS     reduce using rule 22 (declaracion -> ESTABLECE IDENT A valor .)


state 48

    (17) condicional -> SI expresion ENTONCES bloque sino_opcional .

    MOVER           reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)
    MANIFESTAR      reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)
    SI              reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)
    MIENTRAS        reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)
    REPETIR         reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)
    ESTABLECE       reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)
    FIN             reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)
    SINO            reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)
    FINMIENTRAS     reduce using rule 17 (condicional -> SI expresion ENTONCES bloque sino_opcional .)


state 49

    (18) sino_opcional -> SINO . bloque
    (2) bloque -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instrucciones -> .
    (6) instruccion -> . movimiento
    (7) instruccion -> . accion
    (8) instruccion -> . condicional
    (9) instruccion -> . bucle
    (10) instruccion -> . declaracion
    (11) movimiento -> . MOVER direccion
    (16) accion -> . MANIFESTAR CADENA
    (17) condicional -> . SI expresion ENTONCES bloque sino_opcional
    (20) bucle -> . MIENTRAS expresion HACER bloque FINMIENTRAS
    (21) bucle -> . REPETIR NUM VECES COLON bloque
    (22) declaracion -> . ESTABLECE IDENT A valor
